@@ -848,6 +848,22 @@ name|yarn
 operator|.
 name|exceptions
 operator|.
+name|ApplicationNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|exceptions
+operator|.
 name|YarnException
 import|;
 end_import
@@ -1384,6 +1400,17 @@ name|getApplicationReport
 argument_list|(
 name|appId
 argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ApplicationNotFoundException
+name|e
+parameter_list|)
+block|{
+name|application
+operator|=
+literal|null
 expr_stmt|;
 block|}
 catch|catch
