@@ -144,16 +144,6 @@ begin_import
 import|import
 name|org
 operator|.
-name|junit
-operator|.
-name|Assert
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
 name|apache
 operator|.
 name|hadoop
@@ -568,6 +558,22 @@ name|yarn
 operator|.
 name|exceptions
 operator|.
+name|ApplicationNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|exceptions
+operator|.
 name|YarnException
 import|;
 end_import
@@ -585,6 +591,16 @@ operator|.
 name|util
 operator|.
 name|Records
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
 import|;
 end_import
 
@@ -3395,22 +3411,33 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
+name|ApplicationId
+name|appId
+init|=
+name|jobId
+operator|.
+name|getAppId
+argument_list|()
+decl_stmt|;
 name|when
 argument_list|(
 name|rm
 operator|.
 name|getApplicationReport
 argument_list|(
-name|jobId
-operator|.
-name|getAppId
-argument_list|()
+name|appId
 argument_list|)
 argument_list|)
 operator|.
-name|thenReturn
+name|thenThrow
 argument_list|(
-literal|null
+operator|new
+name|ApplicationNotFoundException
+argument_list|(
+name|appId
+operator|+
+literal|" not found"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
