@@ -593,8 +593,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-try|try
-block|{
 name|RunningJob
 name|runJob
 init|=
@@ -615,39 +613,11 @@ literal|"job_0_0"
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|fail
+name|assertNull
 argument_list|(
-literal|"Exception is expected to thrown ahead!"
+name|runJob
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|assertTrue
-argument_list|(
-name|e
-operator|instanceof
-name|IOException
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|e
-operator|.
-name|getMessage
-argument_list|()
-operator|.
-name|contains
-argument_list|(
-literal|"ApplicationNotFoundException"
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 end_class
